@@ -34,16 +34,14 @@ from ConfigParser import RawConfigParser, NoOptionError
 from gettext import gettext as _
 from glob import glob
 
-
 from softwarecenter.enums import *
+from softwarecenter.enums import DB_SCHEMA_VERSION
 from softwarecenter.paths import SOFTWARE_CENTER_ICON_CACHE_DIR
-from softwarecenter.utils import GnomeProxyURLopener
 from softwarecenter.db.database import parse_axi_values_file
 
 from locale import getdefaultlocale
 import gettext
 import cPickle
-
 
 # weights for the different fields
 WEIGHT_DESKTOP_NAME = 10
@@ -581,6 +579,8 @@ def rebuild_database(pathname):
     # write it
     db = xapian.WritableDatabase(pathname, xapian.DB_CREATE_OR_OVERWRITE)
     update(db, cache)
+    # write the database version into the file
+    db.set_metadata("db-schema-version", DB_SCHEMA_VERSION)
     # update the mo file stamp for the langpack checks
     mofile = gettext.find("app-install-data")
     if mofile:
